<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".Ummi">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_konten"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ummi" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/teks_ummi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/konten"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="280dp"
                    android:src="@drawable/adduha"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/audio" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/play"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:text="@string/play"
                        android:textSize="10sp" />
                    <Button
                        android:id="@+id/pause"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_toEndOf="@id/play"
                        android:text="@string/pause"
                        android:textSize="10sp" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>