<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Qalqalah">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_konten"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/qalqalah" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/teks_qalqalah" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/konten"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/qalqalah_sugra" />

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/teks_sugra" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/cth_qalqalah_sugra" />

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/cth_qalqalah_sugra1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/audio" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/play"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:text="@string/play"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/pause"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_toEndOf="@id/play"
                        android:text="@string/pause"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/konten"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/konten_head" />

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/teks_kubra" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/cth_qalqalah_kubra" />

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/cth_qalqalah_kubra1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/audio" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/play1"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:text="@string/play"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/pause1"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_toEndOf="@id/play1"
                        android:text="@string/pause"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>